[metadata]
name = StORF-Reporter
version = 0.3.1
author = Nicholas Dimonaco
author_email = nicholas@dimonaco.co.uk
description = StORF-Reporter - A tool that takes as input an annotated genome and returns missed CDS genes from the unannotated regions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NickJD/StORF-Reporter
project_urls =
    Bug Tracker = https://github.com/NickJD/StORF-Reporter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
