[metadata]
name = StORF-Reporter
version = 0.5.55
author = Nicholas Dimonaco
author_email = nicholas@dimonaco.co.uk
description = StORF-Reporter - A tool that takes as input an annotated genome and returns missed CDS genes from the unannotated regions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NickJD/StORF-Reporter
project_urls =
    Bug Tracker = https://github.com/NickJD/StORF-Reporter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    numpy
    ORForise


[options.packages.find]
where = src
include = *


[options.entry_points]
console_scripts =
    StORF-Reporter = StORF_Reporter.StORF_Reporter:main
    StORF-Finder = StORF_Reporter.StORF_Finder:main
    UR-Extractor = StORF_Reporter.UR_Extractor:main